# chat-template-llamaindex

./: README.md  pyproject.toml  requirements.txt  rxconfig.py
chat_template_llamaindex/: chat_template_llamaindex.py  rag_utils.py  state.py
chat_template_llamaindex/components/: chat.py  modal.py  navbar.py
scripts/: setup_wcs.py
